--- a/pexels-photo-search/src/App.css
+++ b/pexels-photo-search/src/App.css
@@ -1,8 +1,16 @@
 .App {
   text-align: center;
+  background-color: #e93017;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -35,4 +43,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
