--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -1,11 +1,16 @@
 .Navbar {
   text-align: center;
   background-color: #f8c271;
-  min-height: 20vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100%;
+
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
