--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -8,4 +8,9 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100%;
+
+  position: fixed;
+  bottom: 0;
+  z-index: 2;
 }
