--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -1,11 +1,34 @@
 .Gallery {
-  text-align: center;
-  background-color: #80796f;
-  min-height: 60vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: nowrap;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-evenly;
   color: white;
+  font-size: calc(10px + 2vmin);
+  text-align: center;
+  width: 95%;
+  min-height: 60vh;
+  padding: 10px;
+  background-color: #80796f;
+}
+
+.paginationContainer {
+  display: inherit;
+  flex-direction: inherit;
+  flex-wrap: inherit;
+  align-items: inherit;
+  justify-content: inherit;
+  width: 100%;
+  height:max-content;
+}
+
+.galleryPhotos {
+  display: inherit;
+  flex-direction: inherit;
+  flex-wrap: wrap;
+  align-items: inherit;
+  justify-content: inherit;
+  width: 100%;
+  height: 100%;
 }
