--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -7,4 +7,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border: 2px solid red;
+  margin: 5px;
+  max-width: 70vw;
 }
