Rename `Search` component -> `SearchForImages`; render `SearchForImages` as a child component of `Gallery` instead of `App` so that all API data is contained within the `Gallery` component; add `<form>` and `<input>` elements to `SearchForImages` stub component

--- a/pexels-photo-search/src/SearchForPhotos.css
+++ b/pexels-photo-search/src/SearchForPhotos.css
@@ -1,4 +1,4 @@
-.Search {
+.SearchForPhotos {
   text-align: center;
   background-color: #51f827;
   display: flex;
@@ -7,4 +7,13 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  width: 100%;
+}
+
+.SearchForPhotos > form#search-for-photos {
+  width: 75vw;
+}
+
+.SearchForPhotos > form#search-for-photos > input {
+  width: 50vw;
 }
