--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -1,16 +1,27 @@
 .Gallery {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
   color: white;
   font-size: calc(10px + 2vmin);
   text-align: center;
-  width: 95%;
+  width: 100%;
   min-height: 60vh;
+  background-color: #409b1d;
+}
+
+.galleryContainer {
+  display: inherit;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 100%;
   padding: 10px;
-  background-color: #80796f;
+  background-color: #f8e91b;
 }
 
 .paginationContainer {
