--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -1,15 +1,24 @@
 .Footer {
-  text-align: center;
+  background-color: #00233f;
+  display: flex;
+  width: 100%;
+}
+
+.footerSpacer {
+  background-color: #b2d3ee;
+  display: block;
+}
+
+.footerContent {
   background-color: #4da2e7;
-  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+  font-size: calc(10px + 2vmin);
+  text-align: center;
   width: 100%;
-
   position: fixed;
   bottom: 0;
   z-index: 2;
