--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -1,4 +1,30 @@
 .Navbar {
+  background-color: #00233f;
+  display: flex;
+  width: 100%;
+}
+
+.navbarSpacer {
+  background-color: #b2d3ee;
+  display: block;
+}
+
+.navbarContent {
+  background-color: #4da2e7;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: calc(10px + 2vmin);
+  text-align: center;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+}
+
+/* .Navbar {
   text-align: center;
   background-color: #f8c271;
   min-height: 10vh;
@@ -13,4 +39,4 @@
   position: fixed;
   top: 0;
   z-index: 2;
-}
+} */
