change `Gallery` styling from `padding` to `margin` in order to eliminate horizontal scrolling

--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -20,7 +20,7 @@
   justify-content: space-evenly;
   text-align: center;
   width: 100%;
-  padding: 10px;
+  margin: 10px;
   background-color: #f8e91b;
 }
 
