--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -1,5 +1,8 @@
 .Gallery {
+  display: flex;
+  flex-direction: column;
   flex-wrap: nowrap;
+  align-items: center;
   justify-content: space-evenly;
   
   width: 100%;
