--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -4,7 +4,7 @@
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
-  
+  margin-top: 5rem;
   width: 100%;
   min-height: 60vh;
   background-color: #409b1d;
