--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -1,19 +1,8 @@
 .Footer {
-  background-color: #00233f;
-  display: flex;
-  width: 100%;
-}
-
-.footerSpacer {
-  background-color: #b2d3ee;
-  display: block;
-}
-
-.footerContent {
   background-color: #4da2e7;
-  
-  width: 100%;
   position: fixed;
   bottom: 0;
+  width: 100%;
+  height: 5rem;
   z-index: 2;
 }
