--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-evenly;
   margin-top: 5rem;
+  margin-bottom: 5rem;
   width: 100%;
   min-height: 60vh;
   background-color: #409b1d;
@@ -17,7 +18,7 @@
   align-items: center;
   justify-content: space-evenly;
   width: 100%;
-  margin: 10px;
+  margin: 1rem 0;
   background-color: #f8e91b;
 }
 
