--- a/pexels-photo-search/src/PaginationBar.css
+++ b/pexels-photo-search/src/PaginationBar.css
@@ -1,3 +1,10 @@
 .PaginationBar {
   background-color: #f8a527;
-  }
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
