--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -5,11 +5,11 @@
   width: 100%;
   height: 5rem;
   z-index: 2;
-  font-size: calc(14px + 2vmin);
+  font-size: calc(20px + 1vmin);
 }
 
 .Navbar > .navbarText {
   height: 100%;
   text-align: center;
-  margin: .5em;
+  margin-top: 1rem;
 }
