--- a/pexels-photo-search/src/PaginationBar.css
+++ b/pexels-photo-search/src/PaginationBar.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  font-size: calc(6px + 1vmin);
 }
 
 .PaginationBar > button {
