--- a/pexels-photo-search/src/SearchForPhotos.css
+++ b/pexels-photo-search/src/SearchForPhotos.css
@@ -1,7 +1,7 @@
 .SearchForPhotos {
   background-color: #51f827;
   width: 100%;
-  font-size: calc(5px + 2vmin);
+  font-size: calc(10px + 1vmin);
 }
 
 .SearchForPhotos > form#search-for-photos {
@@ -11,4 +11,8 @@
 .SearchForPhotos > form#search-for-photos > input {
   width: 50vw;
   text-align: center;
+}
+
+.SearchForPhotos > button {
+  margin: .5em;
 }
