--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -2,7 +2,9 @@
   background-color: #ff0080;
   border: 2px solid red;
   margin: 5px;
-  max-width: 70vw;
+  /* max-width: 70vw; */
+  display: flex;
+  flex-direction: column;
 }
 
 .loading {
