add SVG Pexels logo

--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -8,12 +8,12 @@
   text-align: center;
 }
 
-.Navbar > .navbarTitle {
+.Navbar > .centerNav > .navbarTitle {
   margin-top: .5rem;
   font-size: calc(20px + 1vmin);
 }
 
-.Navbar > .navbarSubtitle {
+.Navbar > .centerNav > .navbarSubtitle {
   margin-top: .25rem;
   font-size: calc(10px + 1vmin);
 }
