--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -2,9 +2,14 @@
   background-color: #ff0080;
   border: 2px solid red;
   margin: 5px;
-  /* max-width: 70vw; */
   display: flex;
   flex-direction: column;
+}
+
+.Photo > .photoImage {}
+
+.Photo > .photoCredit {
+  font-size: calc(4px + 1vmin);
 }
 
 .loading {
