minor formatting updates to multiple files

--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -6,7 +6,9 @@
   flex-direction: column;
 }
 
-.Photo > .photoImage {}
+.Photo > .photoImage {
+  display: inherit;
+}
 
 .Photo > .photoCredit {
   font-size: calc(4px + 1vmin);
