Environmental variables are embedded in the App at build time, so the .env file is not a secure place to store secrets. The .env file will keep secrets out of the GitHub repository, but will leave them exposed on the live site. Add text to the `Navbar` as a reminder to hide the Pexels API key, which is not currently secret.

--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -13,7 +13,10 @@
 }
 
 .Navbar > .leftNav {
-  display: inherit;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  font-size: calc(4px + 1vmin);
 }
 
 .Navbar > .centerNav {
