update styling of the `Photo` component to center the Pexels image within the `Photo` component

--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -7,6 +7,16 @@
 }
 
 .Photo > .photoImage {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.Photo > .photoImage > a {
+  display: inherit;
+}
+
+.Photo > .photoImage > a > img {
   display: inherit;
 }
 
