--- a/pexels-photo-search/src/SearchForPhotos.css
+++ b/pexels-photo-search/src/SearchForPhotos.css
@@ -2,6 +2,7 @@
   background-color: #51f827;
   width: 100%;
   font-size: calc(10px + 1vmin);
+  margin-top: 5rem;
 }
 
 .SearchForPhotos > form#search-for-photos {
