--- a/pexels-photo-search/src/SearchForm.css
+++ b/pexels-photo-search/src/SearchForm.css
@@ -3,17 +3,19 @@
   width: 100%;
   font-size: calc(10px + 1vmin);
   margin-top: 5rem;
+  margin-bottom: .5rem;
+  display: flex;
+  flex-direction: row;
 }
 
-.SearchForm > form#search-for-photos {
-  width: 75vw;
+form#search-for-photos {
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
 
-.SearchForm > form#search-for-photos > input {
-  width: 50vw;
+form#search-for-photos > input {
+  height: 2rem;
+  width: 100%;
   text-align: center;
-}
-
-.SearchForm > button {
-  margin: .5em;
 }
