--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -1,7 +1,7 @@
 .Footer {
   background-color: #4da2e7;
-  position: fixed;
-  bottom: 0;
+  /* position: fixed;
+  bottom: 0; */
   width: 100%;
   height: 3rem;
   z-index: 2;
