--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -1,7 +1,5 @@
 .Footer {
   background-color: #4da2e7;
-  /* position: fixed;
-  bottom: 0; */
   width: 100%;
   height: 3rem;
   z-index: 2;
@@ -32,10 +30,5 @@
 }
 
 .Footer > .rightNav {
-  display: flex;
-  margin-right: .5rem;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-evenly;
+  display: inherit;
 }
