--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -1,7 +1,7 @@
 .Footer {
   background-color: #4da2e7;
   width: 100%;
-  height: 3rem;
+  height: 4rem;
   z-index: 2;
   display: flex;
   flex-direction: row;
@@ -31,4 +31,15 @@
 
 .Footer > .rightNav {
   display: inherit;
+  font-size: calc(4px + 1vmin);
+}
+
+.Footer > .rightNav > a {
+  display: flex;
+  flex-direction: row;
+}
+
+.Footer > .rightNav > a > .textContainer {
+  display: flex;
+  flex-direction: column;
 }
