--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -8,6 +8,8 @@
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
+  bottom: 0;
 }
 
 .Footer > .leftNav {
