--- a/pexels-photo-search/src/SearchForm.css
+++ b/pexels-photo-search/src/SearchForm.css
@@ -3,7 +3,6 @@
   width: 100%;
   font-size: calc(10px + 1vmin);
   margin-top: 5rem;
-  margin-bottom: .5rem;
   display: flex;
   flex-direction: row;
   position: absolute;
@@ -14,10 +13,12 @@ form#search-for-photos {
   display: flex;
   width: 100%;
   align-items: center;
+  position: relative;
 }
 
 form#search-for-photos > input {
   height: 2rem;
   width: 100%;
   text-align: center;
+  position: relative;
 }
