--- a/pexels-photo-search/src/Results.css
+++ b/pexels-photo-search/src/Results.css
@@ -8,4 +8,8 @@
   align-items: center;
   width: 100%;
   font-size: calc(6px + 1vmin);
+  height: 2rem;
+  position: absolute;
+  top: 0;
+  margin-top: 8rem;
 }
