--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -4,10 +4,9 @@
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
-  /* margin-bottom: 3rem; */
+  margin-bottom: 4rem;
   width: 100%;
-  min-height: 60vh;
-  background-color: #409b1d;
+  background-color: #ffee00;
 }
 
 .galleryContainer {
@@ -18,7 +17,7 @@
   justify-content: space-evenly;
   width: 100%;
   margin: 1rem 0;
-  background-color: #f8e91b;
+  background-color: #0a0a0a0e;
 }
 
 .paginationContainer {
