--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -39,7 +39,10 @@
   font-size: calc(4px + 1vmin);
   color: black;
   z-index: 2;
-  margin-top: -1rem;
+  margin-top: -2rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .loading {
