apply color palette to scrollbar

--- a/pexels-photo-search/src/index.css
+++ b/pexels-photo-search/src/index.css
@@ -23,10 +23,27 @@ a:hover {
   cursor: pointer;
 }
 
+/* color palettes */
+
+/* Pexels logo */
+html {
+  --pexelsLogo: #07A081;
+}
+
+/* Cool and Fresh */
+/* https://visme.co/blog/website-color-schemes/#attachment_13239 */
+html {
+  --darkest: #05396B;
+  --darker: #389583;
+  --base: #5CDB94;
+  --lighter: #8DE4AF;
+  --lightest: #EDF4E0;
+}
+
 /* scrollbar */
 html {
-  --scrollbarBG: #CFD8DC;
-  --thumbBG: #90A4AE;
+  --scrollbarBG: var(--base);
+  --thumbBG: var(--darker);
 }
 body::-webkit-scrollbar {
   width: 10px;
@@ -44,19 +61,3 @@ body::-webkit-scrollbar-thumb {
 }
 
 
-/* color palettes */
-
-/* Pexels logo */
-html {
-  --pexelsLogo: #07A081;
-}
-
-/* Cool and Fresh */
-/* https://visme.co/blog/website-color-schemes/#attachment_13239 */
-html {
-  --darkest: #05396B;
-  --darker: #389583;
-  --base: #5CDB94;
-  --lighter: #8DE4AF;
-  --lightest: #EDF4E0;
-}
