convert all SVG icons from `<img>` elements that use the SVG as the image `src` to inline <svg> elements so that the SVG paths can be styled using CSS

--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -6,7 +6,7 @@
   justify-content: space-evenly;
   margin-bottom: 4rem;
   width: 100%;
-  background-color: #ffee00;
+  /* background-color: #ffee00; */
 }
 
 .galleryContainer {
