--- a/pexels-photo-search/src/SearchForm.css
+++ b/pexels-photo-search/src/SearchForm.css
@@ -1,5 +1,5 @@
 .SearchForm {
-  background-color: #51f827;
+  /* background-color: #51f827; */
   width: 100%;
   font-size: calc(10px + 1vmin);
   margin-top: 5rem;
