--- a/pexels-photo-search/src/PaginationBar.css
+++ b/pexels-photo-search/src/PaginationBar.css
@@ -1,5 +1,5 @@
 .PaginationBar {
-  background-color: #f8a527;
+  /* background-color: #f8a527; */
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
