--- a/pexels-photo-search/src/PersonalLinks.css
+++ b/pexels-photo-search/src/PersonalLinks.css
@@ -1,5 +1,5 @@
 .PersonalLinks {
-  background-color: #f827d5;
+  /* background-color: #f827d5; */
   display: inherit;
   flex-direction: row;
   width: 100%;
