--- a/pexels-photo-search/src/Results.css
+++ b/pexels-photo-search/src/Results.css
@@ -1,5 +1,5 @@
 .Results {
-  background-color: #a1660e;
+  /* background-color: #a1660e; */
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
