refactor Components using inline SVG icons so that the SVG is defined as a constant at the top of the component (instead of defining the SVG inside of the return value)

--- a/pexels-photo-search/src/index.css
+++ b/pexels-photo-search/src/index.css
@@ -23,14 +23,13 @@ a:hover {
   cursor: pointer;
 }
 
-/* color palettes */
+/* Color Palettes */
 
 /* Pexels logo */
 html {
   --pexelsLogo: #07A081;
 }
 
-/* Cool and Fresh */
 /* https://visme.co/blog/website-color-schemes/#attachment_13239 */
 html {
   --darkest: #05396B;
