add additional classNames `enabled` or `disabled` to all icons -- determines whether the icon should change color on hover

--- a/pexels-photo-search/src/index.css
+++ b/pexels-photo-search/src/index.css
@@ -66,10 +66,14 @@ body::-webkit-scrollbar-thumb {
   margin: .5rem;
 }
 
+svg.icon > path {
+  fill: var(--darkest);
+}
+
 .icon:hover {
   cursor: pointer;
 }
 
-svg.icon > path {
-  fill: var(--darkest);
+svg.icon.enabled:hover > path {
+  fill: var(--lightest);
 }
