--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -1,21 +1,49 @@
-.Photo {
+li.Photo {
+  height: 35vh;
+  flex-grow: 1;
+}
+
+li.Photo:last-child {
+  flex-grow: 10;
+}
+
+/* li.Photo > img {
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+} */
+
+li.Photo > a {
+  height: 100%;
+  width: 100%;
+}
+
+li.Photo > a > img {
+  max-height: 100%;
+  min-width: 100%;
+  object-fit: cover;
+  vertical-align: bottom;
+}
+
+/* .Photo {
   background-color: #ff0080;
   margin: 0.5rem;
   display: flex;
   flex-direction: column;
-}
+} 
 
 .Photo > .photoImage {
   display: flex;
   flex-direction: row;
   justify-content: center;
-}
+} */
 
-.Photo > .photoImage > a {
+.Photo > a {
   display: inherit;
 }
 
-.Photo > .photoImage > a > img {
+.Photo > a > img {
   display: inherit;
 
   transition: all 0.2s;
@@ -23,12 +51,12 @@
   -moz-transition: all 0.2s;
 }
 
-.Photo > .photoImage > a > img:hover {
+.Photo > a > img:hover {
   display: inherit;
 
-  transform: scale(1.05);
+  /* transform: scale(1.05);
   -webkit-transform: scale(1.05);
-  -moz-transform: scale(1.05);
+  -moz-transform: scale(1.05); */
   
   filter: contrast(50%);
   -webkit-filter: contrast(50%);
