--- a/pexels-photo-search/src/LoadingIcon.css
+++ b/pexels-photo-search/src/LoadingIcon.css
@@ -1,3 +1,27 @@
 .LoadingIcon {
   background-color: #342928;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: wait;
+}
+
+.spinningLogo {
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .spinningLogo {
+    animation: logo-spin infinite 20s linear;
   }
+}
+
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
