change color of photographer link on hover

--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -48,3 +48,7 @@ div.photoCredit {
 .Photo:hover div.photoCredit {
   visibility: visible;
 }
+
+.photographerUrl:hover {
+  color: var(--yellow);
+}
