--- a/pexels-photo-search/src/Splash.css
+++ b/pexels-photo-search/src/Splash.css
@@ -1,5 +1,5 @@
 .Splash {
-  background-color: inherit;
+  background-color: var(--yellow);
   position: relative;
   width: 100%;
   height: 20rem;
@@ -23,6 +23,7 @@
   width: 100%;
   height: 100%;
   justify-content: space-between;
+  align-items: center;
 }
 
 .matrixLayout > .row > .col {
