--- a/pexels-photo-search/src/SpinningIcon.css
+++ b/pexels-photo-search/src/SpinningIcon.css
@@ -34,9 +34,9 @@
   background: var(--pexelsColor);
   border-radius: 50%;
   box-shadow: 0 0 0 0 var(--pexelsColor);
-  margin: 10px;
-  height: 45px;
-  width: 45px;
+  margin: 1rem;
+  height: 3rem;
+  width: 3rem;
   transform: scale(1);
   animation: pulse-pexels 2s infinite;
   z-index: 2;
@@ -49,7 +49,7 @@
   }
   70% {
     transform: scale(1);
-    box-shadow: 0 0 0 20px var(--pexelsColor00);
+    box-shadow: 0 0 0 2rem var(--pexelsColor00);
   }
   100% {
     transform: scale(0.95);
