--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -3,7 +3,7 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 5rem;
+  height: 9rem;
   z-index: 3;
   display: flex;
   flex-direction: row;
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-left: 1rem;
 }
 
 .Navbar > .centerNav {
@@ -26,7 +27,7 @@
 
 .Navbar > .rightNav {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
 }
 
