--- a/pexels-photo-search/src/SpinningIcon.css
+++ b/pexels-photo-search/src/SpinningIcon.css
@@ -4,15 +4,34 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  height: 100%;
-  width: 100%;
+  height: 6rem;
+  width: 6rem;
+  /* height: 100%;
+  width: 100%; */
   z-index: 1;
 }
 
-.reactIcon {
+svg.reactIcon {
   position: absolute;
   height: 10rem;
+  width: 10rem;
   z-index: 1;
+}
+svg.reactIcon > g {
+  fill: var(--reactIcon);
+}
+svg.pexelsCircle {
+  position: absolute;
+  height: 1.5rem;
+  width: 1.5rem;
+  z-index: 2;
+}
+svg.pexelsCircle > circle {
+  fill: var(--pexelsColor);
+  stroke: var(--pexelsColor);
+}
+svg.pexelsCircle > path {
+  fill: var(--white);
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -38,7 +57,7 @@
   width: 2rem;
   transform: scale(1);
   animation: pulse-pexels 2s infinite;
-  z-index: 2;
+  z-index: 1;
 }
 
 @keyframes pulse-pexels {
@@ -48,7 +67,7 @@
   }
   70% {
     transform: scale(1);
-    box-shadow: 0 0 0 3rem var(--pexelsColor00);
+    box-shadow: 0 0 0 2.5rem var(--pexelsColor00);
   }
   100% {
     transform: scale(0.80);
@@ -56,8 +75,4 @@
   }
 }
 
-.pexelsIcon {
-  position: absolute;
-  height: 1.5rem;
-  z-index: 2;
-}
+
