--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -8,27 +8,49 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
 }
 
 .Navbar > .leftNav {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  justify-content: flex-start;
+  width: 25%;
   margin-left: 1rem;
+}
+
+.spinningIconContainer {
+  justify-content: flex-start;
 }
 
 .Navbar > .centerNav {
   display: flex;
+  flex-direction: row;
+  width: 50%;
+  justify-content: center;
+}
+
+.titleContainer {
+  display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 .Navbar > .rightNav {
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: flex-end;
+  width: 25%;
+  margin-right: 1rem;
+}
+
+.homeIcon {
+  justify-content: flex-end;
+
 }
 
 .navbarTitle {
@@ -52,8 +74,9 @@
 }
 
 .navbarSubtitle > a > .textWrapper {
-  display: inherit;
-  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+  /* font-weight: bold; */
 }
 
 .navbarSubtitle > a > .imgWrapper {
