--- a/pexels-photo-search/src/SpinningIcon.css
+++ b/pexels-photo-search/src/SpinningIcon.css
@@ -18,7 +18,7 @@ svg.reactIcon {
   z-index: 1;
 }
 svg.reactIcon > g {
-  fill: var(--reactIcon);
+  fill: var(--lightest);
 }
 svg.pexelsCircle {
   position: absolute;
