add a translucent black mask to the palette -- currently using it to slightly darken the background of the `Gallery` component

--- a/pexels-photo-search/src/index.css
+++ b/pexels-photo-search/src/index.css
@@ -48,6 +48,10 @@ html {
 }
 
 html {
+  --translucentBlackMask: rgba(0, 0, 0, 0.055);
+}
+
+html {
   --white: #FFFFFF;
   --yellow: #E4EF40;
   --blue: #00ACD8;
