--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -17,7 +17,7 @@
   justify-content: space-evenly;
   width: 100%;
   /* margin: 1rem 0; */
-  background-color: #0a0a0a0e;
+  background-color: var(--translucentBlackMask);
 }
 
 .paginationContainer {
