--- a/pexels-photo-search/src/SearchForm.css
+++ b/pexels-photo-search/src/SearchForm.css
@@ -1,12 +1,15 @@
 .SearchForm {
   width: 100%;
-  font-size: calc(10px + 1vmin);
+  max-width: 40rem;
+  font-size: calc(5px + 1vmin);
   margin-top: 9rem;
   display: flex;
   flex-direction: row;
   position: absolute;
   top: 0;
   height: 3rem;
+  border-color: var(--darker);
+  border-width: 0.2rem;
 }
 
 form#search-for-photos {
@@ -21,4 +24,6 @@ form#search-for-photos > input {
   width: 100%;
   text-align: center;
   position: relative;
+  margin-left: 0.5rem;
+  font-size: inherit;
 }
