--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -3,13 +3,14 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 9rem;
+  height: 7.5rem;
   z-index: 3;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  font-size: calc(5px + 1vmin);
 }
 
 .Navbar > .leftNav {
@@ -50,13 +51,12 @@
 
 .homeIcon {
   justify-content: flex-end;
-
 }
 
 .navbarTitle {
   display: inherit;
   margin-top: .5rem;
-  font-size: calc(18px + 1vmin);
+  font-size: calc(16px + 1vmin);
 }
 
 .navbarSubtitle {
@@ -66,11 +66,17 @@
   font-weight: bold;
   font-size: calc(5px + 1vmin);
   color: var(--darker);
-  align-items: center;
+  align-items: flex-start;
 }
 
 .navbarSubtitle > a {
   display: inherit;
+  align-items: center;
+}
+
+.navbarSubtitle > .textWrapper {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
