Update `Pagination` so that an icon is still rendered even if pagination is disabled. This will keep the "current page" text centered in the middle of the `PaginationBar` at all times. When pagination is disabled, the icon is still rendered, but it is not clickable or visible.

--- a/pexels-photo-search/src/index.css
+++ b/pexels-photo-search/src/index.css
@@ -92,7 +92,11 @@ svg.icon > path {
   fill: var(--darker);
 }
 
-.icon:hover {
+svg.icon.disabled > path {
+  fill: var(--base);
+}
+
+.icon.enabled:hover {
   cursor: pointer;
 }
 
