--- a/pexels-photo-search/src/Photo.css
+++ b/pexels-photo-search/src/Photo.css
@@ -40,9 +40,9 @@ div.photoCredit {
   filter: contrast(80%);
   -webkit-filter: contrast(80%);
   -moz-filter: constrast(80%);
-  transform: scale(1.05);
+  /* transform: scale(1.05);
   -webkit-transform: scale(1.05);
-  -moz-transform: scale(1.05);  
+  -moz-transform: scale(1.05);   */
 }
 
 .Photo:hover div.photoCredit {
