move the `PaginationBar` component inside of the `Navbar` component.

--- a/pexels-photo-search/src/Gallery.css
+++ b/pexels-photo-search/src/Gallery.css
@@ -4,6 +4,7 @@
   flex-wrap: nowrap;
   align-items: center;
   justify-content: space-evenly;
+  margin-top: 11rem;
   margin-bottom: 4rem;
   width: 100%;
 }
