--- a/pexels-photo-search/src/Navbar.css
+++ b/pexels-photo-search/src/Navbar.css
@@ -3,34 +3,55 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 8.5rem;
+  height: 11rem;
   z-index: 3;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
   align-items: flex-start;
   font-size: calc(5px + 1vmin);
 }
 
-.Navbar > .leftNav {
+.navbarRow {
+  background-color: inherit;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.leftNav {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
-  width: 25%;
+  width: 100%;
+  max-width: 15vw;
   margin-left: 1rem;
+  margin-top: 1rem;
+}
+
+.centerNav {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 70vw;
+  justify-content: center;
+}
+
+.rightNav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  max-width: 15vw;
+  margin-right: 1rem;
+  margin-top: 1rem;
 }
 
 .spinningIconContainer {
   justify-content: flex-start;
-}
-
-.Navbar > .centerNav {
-  display: flex;
-  flex-direction: row;
-  width: 50%;
-  justify-content: center;
 }
 
 .titleContainer {
@@ -38,16 +59,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  margin-top: 0.5rem;
 }
 
-.Navbar > .rightNav {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-end;
-  width: 25%;
-  margin-right: 1rem;
-}
 
 .homeIcon {
   justify-content: flex-end;
@@ -57,6 +71,11 @@
   display: inherit;
   margin-top: .5rem;
   font-size: calc(16px + 1vmin);
+}
+
+.navbarTitle:hover {
+  color: var(--lightest);
+  cursor: pointer;
 }
 
 .navbarSubtitle {
