--- a/pexels-photo-search/src/Results.css
+++ b/pexels-photo-search/src/Results.css
@@ -8,8 +8,8 @@
   width: 100%;
   font-size: calc(5px + 1vmin);
   height: 2rem;
-  position: absolute;
-  top: 0;
-  margin-top: 6.5rem;
+  /* position: absolute; */
+  /* top: 0; */
+  /* margin-top: 6.5rem; */
   color: var(--darker);
 }
