--- a/pexels-photo-search/src/SearchForm.css
+++ b/pexels-photo-search/src/SearchForm.css
@@ -1,15 +1,16 @@
 .SearchForm {
   width: 100%;
-  max-width: 70vw;
+  max-width: 80vw;
   font-size: calc(5px + 1vmin);
-  margin-top: 4rem;
+  /* margin-top: 4rem; */
   display: flex;
   flex-direction: row;
-  position: absolute;
-  top: 0;
+  /* position: absolute; */
+  /* top: 0; */
   height: 3rem;
   border-color: var(--darker);
   border-width: 0.2rem;
+  background-color: var(--white);
 }
 
 form#search-for-photos {
