--- a/pexels-photo-search/src/Footer.css
+++ b/pexels-photo-search/src/Footer.css
@@ -1,14 +1,32 @@
 .Footer {
   width: 100%;
-  height: 4rem;
+  height: 10rem;
   z-index: 2;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: center;
+  /* justify-content: space-between; */
   align-items: center;
   position: absolute;
   bottom: 0;
+  font-size: calc(5px + 1vmin);
+}
+
+.Footer > .footerColumn {
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+}
+
+.Footer > .footerColumn > .copyright {
+  margin-top: 0.5rem;
+  margin-bottom: 0.25rem;
+}
+
+.Footer > .footerColumn > .PersonalLinks {
+  margin-top: 0.25rem;
+  margin-bottom: 0.5rem;
 }
 
 .Footer > .leftNav {
