--- a/pexels-photo-search/src/LoadingIcon.css
+++ b/pexels-photo-search/src/LoadingIcon.css
@@ -1,4 +1,4 @@
-.LoadingIcon {
+.loading-icon-component {
   background-color: #342928;
   display: flex;
   flex-direction: column;
@@ -7,12 +7,12 @@
   cursor: wait;
 }
 
-.spinningLogo {
+.spinning-logo {
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .spinningLogo {
+  .spinning-logo {
     animation: logo-spin infinite 20s linear;
   }
 }
