--- a/pexels-photo-search/src/PaginationBar.css
+++ b/pexels-photo-search/src/PaginationBar.css
@@ -1,4 +1,4 @@
-.PaginationBar {
+.pagination-bar-component {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -11,7 +11,7 @@
   color: var(--darker);
 }
 
-.PaginationBar > button {
+.pagination-bar-component > button {
   margin-left: 1rem;
   margin-right: 1rem;
 }
