--- a/pexels-photo-search/src/SearchForm.css
+++ b/pexels-photo-search/src/SearchForm.css
@@ -1,4 +1,4 @@
-.SearchForm {
+.search-form-component {
   width: 100%;
   max-width: 80vw;
   font-size: calc(5px + 1vmin);
@@ -59,10 +59,10 @@ textarea {
   background-color: var(--lightest);
 }
 
-svg.icon.enabled.iconSearch > path {
+svg.icon.enabled.icon-search > path {
   fill: var(--darker);
 }
 
-svg.icon.enabled.iconSearch:hover > path {
+svg.icon.enabled.icon-search:hover > path {
   fill: var(--darkest);
 }
