--- a/pexels-photo-search/src/Splash.css
+++ b/pexels-photo-search/src/Splash.css
@@ -1,4 +1,4 @@
-.Splash {
+.splash-component {
   background-color: var(--yellow);
   position: relative;
   width: 100%;
@@ -7,7 +7,7 @@
   z-index: 1;
 }
 
-.matrixLayout {
+.matrix-layout {
   width: 100%;
   height: 100%;
   display: flex;
@@ -17,7 +17,7 @@
   align-items: center;
 }
 
-.matrixLayout > .row {
+.matrix-layout > .row {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -26,6 +26,6 @@
   align-items: center;
 }
 
-.matrixLayout > .row > .col {
+.matrix-layout > .row > .col {
   width: 100%;
 }
