--- a/pexels-photo-search/src/SplashGrid.css
+++ b/pexels-photo-search/src/SplashGrid.css
@@ -1,4 +1,4 @@
-.SplashGrid {
+.splash-grid-component {
   background-color: inherit;
   position: relative;
   width: 100%;
@@ -7,7 +7,7 @@
   z-index: 1;
 }
 
-.matrixLayout {
+.matrix-layout {
   width: 100%;
   height: 100%;
   display: flex;
@@ -17,7 +17,7 @@
   align-items: center;
 }
 
-.matrixLayout > .row {
+.matrix-layout > .row {
   display: flex;
   flex-direction: row;
   width: 100%;
@@ -25,6 +25,6 @@
   justify-content: space-between;
 }
 
-.matrixLayout > .row > .col {
+.matrix-layout > .row > .col {
   width: 100%;
 }
